# net-keytar

./: .gitignore  .gitmodules  README.md  keytar.sln
native-wrapper/: .gitignore  bindable-keytar.cc  bindable-keytar.h  configure.ac  credentials.h  keytar.h  keytar_mac.cc  keytar_posix.cc  makefile.am
src/keytar/: Keytar.cs  keytar.csproj
src/tests/: MacOsTests.cs  tests.csproj
